name:                Pacman
version:             0.1.0.0
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable Pacman
  main-is:             Main.hs
  other-modules:       Model, Controller, View
  build-depends:       base >= 4 && < 5, gloss, random, split, lens
  hs-source-dirs:      src
  default-language:    Haskell2010

